# CameraCalibration_OpenCV

./: .gitignore  CMakeLists.txt  camera_calibration.cc  camera_calibration_fisheye.cc  take_camera_images.cc
config/: default-fisheye.xml  default.xml  images.xml
